# hindsight

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AGENTS_GENERATED.md  ARCHITECTURE_WHY.md  CHANGELOG.md  CLAUDE.md  CLIENTS_AND_INTEGRATIONS_EVALUATION.md  DOCKER_MODEL_RUNNER.md  Dockerfile.agent-api  EMBEDDINGS_CONFIG.md  EMBEDDINGS_OPTIONS.md  HINDSIGHT-DOCKER.md  HINDSIGHT_ENV_VARS_COMPLETE.md  IMPORT_COMPLETE.md  IMPORT_STATUS.md  IMPORT_SUCCESS.md  LITELLM_IN_PROCESS_GUIDE.md  MONITORING_GUIDE.md  OLLAMA_SPLIT_SETUP.md  PRODUCTION_DEPLOYMENT_GUIDE.md  QUICK_START.md  README.md  REFACTORING_PLAN_V2.md  SERVICES_DASHBOARD.md  STARTUP_ANALYSIS_2026-06-27.md  STARTUP_IMPROVEMENTS.md  TRACING_AND_DATASETS.md  batch_import.py  check_database.py  clear_embeddings.py  clear_mental_models.py  config.py  create_agent_full_spec.py  deploy-bicep.ps1  direct_import.py  do_import.py  docker-compose-model-proxy.yml  docker-compose-ollama.yml  (+26 more)
central-api/: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  central_api_dev.db  pyproject.toml
central-api/.agents/summary/: architecture.md  codebase_info.md  components.md  data_models.md  dependencies.md  index.md  interfaces.md  review_notes.md  workflows.md
central-api/.claude/skills/run-central-api/: SKILL.md  smoke.sh
central-api/alembic/: placeholder.txt
central-api/app/: __init__.py  config.py  main.py
central-api/app/adapters/: __init__.py  base.py  coderag.py  hindsight.py  internal.py  memlord.py  openmemory.py
central-api/app/ai/: chat.py  inventory.py  litellm.py  localai.py  ollama.py  providers.py  router_preview.py  routes.py  schemas.py  service.py
central-api/app/api_center/: __init__.py  routes.py  schemas.py  service.py
central-api/app/audit/: __init__.py  logger.py  middleware.py  routes.py  schemas.py
central-api/app/auth/: __init__.py  apikey.py  context.py  internal.py  jwt.py  permissions.py
central-api/app/connectors/: __init__.py  routes.py
central-api/app/connectors/google_drive/: __init__.py  audit_actions.py  client.py  normalize.py  oauth.py  service.py
central-api/app/controlplane/: __init__.py  deps.py  routes.py
central-api/app/db/: __init__.py  engine.py  ids.py  repositories.py  tables.py
central-api/app/execution/: __init__.py  ledger.py  routes.py
central-api/app/execution/adapters/: __init__.py  base.py  docker.py  github.py  ssh.py
central-api/app/governance/: __init__.py  agent_control.py  approval_routes.py  quarantine.py  retrieval_policy.py  write_gate.py
central-api/app/health/: __init__.py  dashboard_routes.py  routes.py
central-api/app/ingestion/: __init__.py  worker.py
central-api/app/mcp/: __init__.py  routes.py  tools.py
central-api/app/memory/: __init__.py  context_pack.py  routes.py  schemas.py  service.py
central-api/app/observability/: __init__.py  health.py  metrics.py  routes.py
central-api/app/operator/: __init__.py  routes.py  schemas.py
central-api/app/policy/: __init__.py  classifier.py  redactor.py  rules.py
central-api/app/retrieval/: __init__.py  context_pack.py  routes.py  rrf.py  schemas.py  service.py
central-api/app/router/: __init__.py  routes.py  schemas.py  service.py
central-api/app/security/: middleware.py  redaction.py
central-api/docs/: control-plane-v0.1.md
central-api/docs/runtime/: ai-gateway-foundation.md  governed-chat-playground.md  litellm-provider.md  localai-provider.md  model-router-policy.md  ollama-provider.md
central-api/migrations/: env.py
central-api/migrations/versions/: 0001_initial_control_plane.py
central-api/operator-ui/: .env.local.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.api-contract-tests.json
central-api/operator-ui/.playwright-cli/: page-2026-06-17T14-26-49-409Z.yml  page-2026-06-17T14-26-51-664Z.yml  page-2026-06-17T14-26-57-166Z.yml  page-2026-06-17T14-26-59-168Z.yml  page-2026-06-17T14-27-01-058Z.yml  page-2026-06-17T14-27-03-132Z.yml  page-2026-06-17T14-27-07-165Z.yml  page-2026-06-17T14-27-10-983Z.yml  page-2026-06-17T14-27-16-737Z.yml  page-2026-06-17T14-27-26-052Z.yml
central-api/operator-ui/app/: globals.css  layout.tsx  page.tsx
central-api/operator-ui/app/agent-activity/: page.tsx
central-api/operator-ui/app/audit/: page.tsx
central-api/operator-ui/app/connection/: page.tsx
central-api/operator-ui/app/connectors/: page.tsx
central-api/operator-ui/lib/: api.ts  operatorApiClient.test.ts  operatorApiClient.ts  ui.tsx  useWorkspace.ts
central-api/scripts/: seed_dev_data.sql  seed_dev_data_final.sql
central-api/stored/docs/: API-UI-CONTRACT-001.md
central-api/tests/: conftest.py  test_adapters.py  test_agent_control.py  test_ai_gateway.py  test_ai_inventory.py  test_api_controlplane.py  test_auth.py  test_chat_playground.py  test_connector_flow.py  test_context_pack.py  test_drive_normalize.py  test_governance.py  test_governance_migration.py  test_health.py  test_mcp_tools.py  test_memlord_adapter.py  test_oauth_config.py  test_observability.py  test_policy_redaction.py  test_retrieval.py  test_retrieval_policy.py  test_router_decisions.py  test_security.py
hindsight-integrations/copilot-cli/: README.md  pyproject.toml
hindsight-integrations/copilot-cli/hindsight_copilot_cli/: __init__.py  cli.py  install.py
hindsight-integrations/copilot-cli/tests/: conftest.py  test_bank.py  test_cli.py  test_client.py  test_content.py  test_hooks.py  test_install.py
hindsight-integrations/tealtiger/: .gitignore  README.md  pyproject.toml
hindsight-integrations/tealtiger/hindsight_tealtiger/: __init__.py  memory.py
hindsight-integrations/tealtiger/tests/: test_memory.py
hindsight-integrations/zcode/: .gitignore  README.md  pyproject.toml
hindsight-integrations/zcode/.claude-plugin/: plugin.json
hindsight-integrations/zcode/hindsight_zcode/: __init__.py  __main__.py  cli.py  install.py
hindsight-integrations/zcode/hooks/: hooks.json
hindsight-integrations/zcode/tests/: conftest.py  test_bank.py  test_cli.py  test_client.py  test_content.py  test_hooks.py  test_install.py  test_plugin.py
(+2785 files in other folders)
