[project]
name = "hindsight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gcloud>=0.18.3",
    "genkit-plugin-google-genai>=0.7.0",
    "huggingface>=0.0.1",
    "huggingface-hub>=1.21.0",
    "litellm>=1.90.0",
    "ollama>=0.6.2",
]

[dependency-groups]
dev = [
    "hindsight",
]

[tool.uv.sources]
hindsight = { workspace = true }
