[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hindsight-tealtiger"
version = "0.1.0"
description = "Governance-aware agent memory — importance-weighted storage and contextual recall of TealTiger governance decisions via Hindsight."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "TealTiger", email = "feedback@tealtiger.ai"}
]
keywords = ["hindsight", "tealtiger", "governance", "ai-memory", "compliance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "hindsight-client>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/vectorize-io/hindsight"
Repository = "https://github.com/vectorize-io/hindsight/tree/main/hindsight-integrations/tealtiger"
Issues = "https://github.com/vectorize-io/hindsight/issues"

[tool.setuptools.packages.find]
include = ["hindsight_tealtiger*"]
