[project]
name = "hindsight-zcode"
version = "0.1.0"
description = "ZCode (Z.ai GLM) integration for Hindsight - persistent long-term memory via ZCode hooks"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Vectorize", email = "support@vectorize.io" }
]
keywords = [
    "ai",
    "memory",
    "zcode",
    "glm",
    "z.ai",
    "hooks",
    "agents",
    "hindsight",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = []

[project.scripts]
hindsight-zcode = "hindsight_zcode.cli:main"

[project.urls]
Homepage = "https://github.com/vectorize-io/hindsight"
Documentation = "https://github.com/vectorize-io/hindsight/tree/main/hindsight-integrations/zcode"
Repository = "https://github.com/vectorize-io/hindsight"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hindsight_zcode"]
# The hook payload under hindsight_zcode/hooks/ (scripts + JSON) ships as
# package data; the installer extracts it via importlib.resources.
artifacts = [
    "hindsight_zcode/hooks/**/*",
]

[tool.hatch.build.targets.sdist]
include = [
    "hindsight_zcode/**/*",
    "tests/**/*",
    "README.md",
    "LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.8.0",
]
